--- a/build.gradle
+++ b/build.gradle
@@ -152,6 +152,7 @@ configurations {
 	prebuild_jaxrs { transitive = false }
 	prebuild_testng { transitive = false }
 	prebuild_wlfullc { transitive = false }
+	prebuild_cache { transitive = false }
 	compile.exclude group: "com.google.code.findbugs", module: "annotations"
 }
 
@@ -185,6 +186,7 @@ dependencies {
 			'com.sun.jersey:jersey-servlet:1.17.1',
 			'org.codehaus.jettison:jettison:1.3.4'
 	prebuild_wlfullc 'com.oracle.weblogic:wlfullclient:12.1.2-0-0'
+	prebuild_cache 'coherence:coherence:12.1.2'
 }
 
 // Copy downloaded 3rd party jars from Artifactory into the locations 
@@ -201,6 +203,7 @@ task preBuildCompile(type: Copy) {
    from configurations.prebuild_jaxrs
    from configurations.testNG
    from configurations.prebuild_wlfullc
+   from configurations.prebuild_cache
    into "$afDir"
    rename 'registry-lookup-client-1.0.0-(.*).jar', 'registry-lookup-client-1.0.0.jar'
    rename 'registry-client-1.0.0-(.*).jar', 'registry-client-1.0.0.jar'
