--- a/savedsearch-web/test.gradle
+++ b/savedsearch-web/test.gradle
@@ -16,4 +16,7 @@ dependencies {
 	testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
 	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
   testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
+    testConfig('com.sun.jersey:jersey-servlet:1.17.1') { transitive = false }
+    testConfig('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
+    testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
 }
