--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -42,6 +42,12 @@ artifactoryPublish {
 build.dependsOn integTestJar
 
 sourceSets {
+	main {
+		java {
+			srcDirs = ['src/main/java']
+		}
+		resources.srcDirs = ['src/main/java']
+	}
 	test{
 		java {
 			srcDirs = ['src/integTest/java']
@@ -72,16 +78,22 @@ dependencies {
 	compile project(':savedsearch-entities'){transitive = false}
 	testRuntime(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
 	compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){transitive = false}
-  compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){transitive = false}
+	compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){transitive = false}
 	compile(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){transitive = false}
 	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
 	compile(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){transitive = false}
-  compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
-  compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
-  compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
-  compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
-  compile(group: 'coherence', name: 'coherence', version: '12.1.2') {transitive=false}
-compile configurations.testNG
-compile configurations.webdriver
-compile configurations.restAssured
+	compile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
+	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
+	compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
+	compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
+	compile(group: 'coherence', name: 'coherence', version: '12.1.2') {transitive=false}
+	compile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){transitive = false}
+	compile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
+	compile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
+	compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.0.0+')
+	compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') 
+	compile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2')  { transitive = false }
+	compile configurations.testNG
+	compile configurations.webdriver
+	compile configurations.restAssured
 }
