--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -40,7 +40,8 @@ dependencies
         earlib(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1')
         earlib(group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.0.1') {transitive=false }
         earlib(group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.0.1') {transitive=false }
-        earlib(group: 'org.apache.logging.log4j', name: 'log4j-web', version: '2.0') {transitive=false }	
+        earlib(group: 'org.apache.logging.log4j', name: 'log4j-web', version: '2.0') {transitive=false }
+        earlib(group: 'coherence', name: 'coherence', version: '12.1.2') {transitive=false }	
 //	earlib (group: 'log4j', name: 'log4j', version: '1.2.17') {transitive=false }
 }
 
