--- a/savedsearch-entities/build.gradle
+++ b/savedsearch-entities/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply from: 'test.gradle'
 
 jar {
 	from('src/main/java/META-INF')
@@ -17,6 +18,8 @@ jar {
 dependencies {
 	compile(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){transitive = false}
 	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
+	testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
+
 }
 
 /*
