--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -80,7 +80,8 @@ dependencies {
   compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
   compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
   compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
-compile configurations.testNG
+    testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
+    compile configurations.testNG
 compile configurations.webdriver
 compile configurations.restAssured
 }
