--- a/savedsearch-core/test.gradle
+++ b/savedsearch-core/test.gradle
@@ -18,5 +18,6 @@ dependencies {
 	testConfig(group: 'org.eclipse.persistence', name: 'javax.persistence', version: '2.0.5'){ transitive = false }
 	testConfig(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') { transitive = false }
 	testConfig(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){ transitive = false }
-	testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }    	
+	testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
+    testConfig(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
 }
