--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -1,9 +1,16 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+import java.text.SimpleDateFormat
+import java.util.Date
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 apply plugin: 'TestInfraPlugin'
 apply from: 'test.gradle'
 apply plugin: 'artifactory-publish'
+
+dfversion = project.ext.getServiceVersion('SavedSearchService')
+def versionPathElement = dfversion + "-"+ new SimpleDateFormat("yyMMdd.HHmmss").format(new Date())
 
 /*
 	NOTE: 
@@ -46,7 +53,7 @@ sourceSets {
 		java {
 			srcDirs = ['src/main/java']
 		}
-		resources.srcDirs = ['src/main/java']
+		resources.srcDirs = ['src/main/java', 'src/main/resources']
 	}
 	test{
 		java {
@@ -54,6 +61,13 @@ sourceSets {
 		}
 		resources.srcDirs = ['src/integTest/java']
 	}
+}
+
+processResources {
+    from('src/main/resources') {
+        include '*.properties', '*.xml'
+        filter(ReplaceTokens, tokens: [version : versionPathElement])
+    }
 }
 
 task runDEVTestSuite(type: Test){
@@ -87,6 +101,7 @@ dependencies {
 	compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
 	compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
 	compile(group: 'coherence', name: 'coherence', version: '12.1.2') {transitive=false}
+	compile(group: 'com.sun.jersey', name: 'jersey-core', version: '1.17.1') {transitive=false}
 	compile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){transitive = false}
 	compile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
 	compile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
