--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -108,6 +108,7 @@ dependencies {
 	compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.0.0+')
 	compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') 
 	compile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2')  { transitive = false }
+	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
 	compile configurations.testNG
 	compile configurations.webdriver
 	compile configurations.restAssured
