--- a/savedsearch-tools/build.gradle
+++ b/savedsearch-tools/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+'){transitive = false}
         compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+'){transitive = false}
         compile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){transitive = false}
+    testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
         
 	compile configurations.restAssured
 	compile configurations.testNG
