--- a/build.gradle
+++ b/build.gradle
@@ -191,7 +191,7 @@ dependencies {
 			'com.sun.jersey:jersey-servlet:1.17.1',
 			'org.codehaus.jettison:jettison:1.3.4'
 	prebuild_wlfullc 'com.oracle.weblogic:wlfullclient:12.1.2-0-0'
-	prebuild_cache 'coherence:coherence:12.1.2'
+	prebuild_cache   'com.oracle.coherence:coherence:12.1.3.0.0-130331.2230'
 }
 
 // Copy downloaded 3rd party jars from Artifactory into the locations 
