--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -100,7 +100,7 @@ dependencies {
 	compile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
 	compile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
 	compile(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
-	compile(group: 'coherence', name: 'coherence', version: '12.1.2') {transitive=false}
+	compile(group: 'com.oracle.coherence', name: 'coherence', version: '12.1.3.0.0-130331.2230') {transitive=false}
 	compile(group: 'com.sun.jersey', name: 'jersey-core', version: '1.17.1') {transitive=false}
 	compile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){transitive = false}
 	compile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
