--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -192,7 +192,7 @@ dependencies {
 	providedCompile configurations.restAssured
 
 	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){transitive = false}
-	providedCompile(group: 'coherence', name: 'coherence', version: '12.1.2') {transitive=false}
+	providedCompile(group: 'com.oracle.coherence', name: 'coherence', version: '12.1.3.0.0-130331.2230') {transitive=false}
 	
 
   providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.+') 
