--- a/savedsearch-core/test.gradle
+++ b/savedsearch-core/test.gradle
@@ -3,6 +3,9 @@ sourceSets {
         java.srcDir 'src/integTest/java'
         compileClasspath = configurations.testNG+configurations.restAssured+configurations.testConfig
     }
+	resources {	
+			srcDirs = ['src/main/java', 'src/resources/java']
+		}	
 }
 task integTestJar (type:Jar) {
     from sourceSets.integTest.output
