--- a/savedsearch-web-utils/build.gradle
+++ b/savedsearch-web-utils/build.gradle
@@ -7,6 +7,14 @@ jar {
         }
 }
  
+sourceSets {
+	test{
+		java {
+			srcDirs = ['src/integTest/java']
+		}
+		resources.srcDirs = ['src/integTest/java']
+	}
+}
 dependencies {    
 //	compile(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+') 
   	compile project(':savedsearch-core')
@@ -15,4 +23,13 @@ dependencies {
         compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
         compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+')
         compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+')
+testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
 } 
+test {
+        useTestNG()
+        {
+                //We explicity include only tests annotate as s1 or s2 - they are "short-running" tests,
+                //if you wish to run ALL tests within this projet - remove following.
+                includeGroups 's1' ,'s2'
+        }
+}
