--- a/tests/suites/emcpssf_upgrade_test_3n.gradle
+++ b/tests/suites/emcpssf_upgrade_test_3n.gradle
@@ -14,12 +14,13 @@ buildscript {
         classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_commontasks", version: "${omctfVersion}"                
 	classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_taskprocessor", version: "${omctfVersion}"  
     }                                                                                                                         
-}                                                                                                                             
+}  
+apply from: 'setup.gradle'
 apply plugin: 'DevInfraPlugin'                                                                                                
 apply plugin: 'TestInfraPlugin'                                                                                               
 apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_commontasks")                             
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest     
-                                                                     
+apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")                                                                     
 repositories {
     maven {  
         url = "${PUB_MAVEN_MY_MAVEN_REPO}"
@@ -32,7 +33,11 @@ repositories {
 
 dependencies {
     //testConfig group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-upgrade-tests-integ-tests', version: "${REPO_BID}"
+   testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
     testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core', version: "${REPO_BID}") {transitive = false}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
+
     testConfig group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-web-integ-tests', version: "${REPO_BID}"
    testConfig group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-core-integ-tests', version: "${REPO_BID}"
    testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
