--- a/tests/suites/emcpssf_upgrade_test_3n.gradle
+++ b/tests/suites/emcpssf_upgrade_test_3n.gradle
@@ -71,7 +71,7 @@ println "Customizing the UpgradeDataPopulation"
 
 
 
-    //useWebdriver = true
+    useWebdriver = true
     useRestAssured = true
    
 }
@@ -91,15 +91,17 @@ task post_upgrade (type: EMTest, dependsOn: [omcCloudUpgrade,omcTenantAgentSetup
 	    }
 
  
-    //useWebdriver = true
+    useWebdriver = true
     useRestAssured = true
 
 }
 
+post_upgrade.mustRunAfter pre_upgrade
+omcTeardown.mustRunAfter ([pre_upgrade,post_upgrade])
 
-//task emcpssf_upgrade_test_3n (dependsOn: ['omcSetup', 'omcTeardown']) {
 task emcpssf_upgrade_test_3n (dependsOn:[pre_upgrade,post_upgrade,omcTeardown]){
-    apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")
+    //apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")
+    apply from: getAbsoluteFilePath("omctf_taskprocessor")
 }
 
 
