changes in gradle file

--- a/tests/suites/emcpssf_upgrade_test_3n.gradle
+++ b/tests/suites/emcpssf_upgrade_test_3n.gradle
@@ -103,8 +103,8 @@ post_upgrade.mustRunAfter pre_upgrade
 omcTeardown.mustRunAfter ([pre_upgrade,post_upgrade])
 
 task emcpssf_upgrade_test_3n (dependsOn:[pre_upgrade,post_upgrade,omcTeardown]){
-    //apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")
-    apply from: getAbsoluteFilePath("omctf_taskprocessor")
+    apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")
+    //apply from: getAbsoluteFilePath("omctf_taskprocessor")
 }
 
 
