--- a/appServerConfig.config
+++ b/appServerConfig.config
@@ -1,6 +1,6 @@
 environments {
 	dev {
-		serverName = 'slc07ctj.us.oracle.com'
+		serverName = 'den00ytq.us.oracle.com'
 		port = '7001'
 		adminUser = 'weblogic'
 		adminUserPwd = 'welcome1'
