--- a/tests/suites/emcpssf_qa_test.gradle
+++ b/tests/suites/emcpssf_qa_test.gradle
@@ -60,9 +60,10 @@ dependencies {
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-core', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
-
-	
-	testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
+ 	testConfig (group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
+	testConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
+        testConfig(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
+	testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
 	testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
 	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
   testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
@@ -80,9 +81,9 @@ task DeploySSFAPI(type:Exec) {
     args '-p',  project.properties['emdi.GIT_VIEW_ROOT'] +'/savedsearch-ear/', 'appServerDeploy'
 }
 task PropsCopy(type: Copy,dependsOn: DeploySSFAPI) {
-   from '/net/slc07ctj/scratch/emga/emaas_endtoend_deploy/setuplogs/'
+   from '/net/den00ytq/scratch/emaas/setuplogs/'
    into '../../oracle/work/'
-    include '*.log'
+   include '*.log'
 }
 
 
