--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -151,24 +151,22 @@ test {
 
  
 dependencies {
-	testCompile('com.sun.jersey:jersey-servlet:1.17.1') { transitive = false }
-	testCompile('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
-	testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
 	providedCompile project(':savedsearch-entities'){transitive = false}
 	providedCompile project(':savedsearch-core'){transitive = false}
 	providedCompile project(':savedsearch-web-utils'){transitive = false}
+	
+	//providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
 	providedCompile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
-  providedCompile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+') 
+	providedCompile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+') 
 	providedCompile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+') 
-
+	
 	providedCompile(group: 'javax.servlet', name:'servlet-api', version:'2.5'){transitive = false}
 	providedCompile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17')
 	providedCompile(group: 'com.sun.jersey.contribs', name: 'jersey-multipart', version: '1.17.1') { transitive = false }
 	providedCompile(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
-	providedCompile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
-        
-  providedCompile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){transitive = false}
-  providedCompile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){transitive = false}
+	
+	providedCompile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){transitive = false}
+	providedCompile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){transitive = false}
 
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
 	providedCompile(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
@@ -180,20 +178,18 @@ dependencies {
 	providedCompile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
 	providedCompile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1'){transitive = false}
 	providedCompile configurations.testNG
- 	providedCompile configurations.webdriver
+	providedCompile configurations.webdriver
 	providedCompile configurations.restAssured
 
 	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){transitive = false}
 	
-
-  providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.+') 
-  providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {
-      exclude group: 'emaas.platform', module: 'registry-lookup-client'
-      exclude group: 'emaas.platform', module: 'registry-client'
-  }	
+	providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {
+		exclude group: 'emaas.platform', module: 'registry-lookup-client'
+		exclude group: 'emaas.platform', module: 'registry-client'
+	}
 
 	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.28'
-	enunciateCore 'org.codehaus.enunciate:enunciate-core:1.28'
+	
 	restDoc(
 		[group: 'org.codehaus.enunciate', name: 'enunciate-core-rt', version: '1.28'],
 		[group: 'org.codehaus.enunciate', name: 'enunciate-core', version: '1.28'],
@@ -201,13 +197,18 @@ dependencies {
 		[group: 'org.codehaus.enunciate', name: 'enunciate-core-annotations', version: '1.28'],
 		[group: 'com.oracle.weblogic', name: 'jersey-core-1.17.1', version: '12.1.2-0-0'],
 		[group: 'com.oracle.weblogic', name: 'jersey-server-1.17.1', version: '12.1.2-0-0'],
-		[group: 'com.oracle.weblogic', name: 'jersey-servlet-1.17.1', version: '12.1.2-0-0']		
+		[group: 'com.oracle.weblogic', name: 'jersey-servlet-1.17.1', version: '12.1.2-0-0']
 	)
+	
 	ftpAntTask('org.apache.ant:ant-commons-net:12.1.2-0-0') {
-			module('commons-net:commons-net:1.4.1') {
-				dependencies 'oro:oro:2.0.8:jar'
-			}
+		module('commons-net:commons-net:1.4.1') {
+			dependencies 'oro:oro:2.0.8:jar'
 		}
+	}
+	
+	testCompile('com.sun.jersey:jersey-servlet:1.17.1') { transitive = false }
+	testCompile('com.sun.jersey:jersey-server:1.17.1') { transitive = false }
+	testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
  }
 
 build.dependsOn integTestJar
