--- a/build.gradle
+++ b/build.gradle
@@ -127,12 +127,9 @@ task runS1Tests(type: Exec) {
 
 runS1Tests.enabled = !project.disableBuildTests
  task runS2Tests(type: Exec) {
-    executable project.gradle.gradleHomeDir.absolutePath + '/bin/gradle'
-    args 'do_lrg', '-Plrgs=emcpssf_web_unit_test'
-    if (project.hasProperty('BuildID')) {
-        args "-PREPO_BID=${BuildID}"
-    }
-    finalizedBy "print_results"
+doLast {
+        println "runS2Tests is not ready yet."
+   }
 } 
 
 runS2Tests.enabled = !project.disableBuildTests
