--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -24,6 +24,10 @@
  */
 buildscript {
     repositories {
+
+	 maven {
+            url = "${PUB_MAVEN_MY_MAVEN_REPO}"
+        }
         maven {
             url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
@@ -126,5 +130,9 @@ ext.set("testType", "integration")
 }
 
 
-task emcpssf_web_unit_test (dependsOn: QATest)
+task emcpssf_l0_test (dependsOn: QATest)
+if (new File("codeCoverage.gradle").exists()) {
+apply from: "../../codeCoverage/codeCoverage.gradle"
+}
+
 
