--- a/tests/suites/emcpssf_l2_test_3n.gradle
+++ b/tests/suites/emcpssf_l2_test_3n.gradle
@@ -25,6 +25,9 @@
 buildscript {
     repositories {
 	maven {
+            url = "${PUB_MAVEN_MY_MAVEN_REPO}"
+        }
+	maven {
             url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
     dependencies {
@@ -37,8 +40,9 @@ buildscript {
 apply from: 'setup.gradle'
 apply plugin: 'DevInfraPlugin'
 apply plugin: 'TestInfraPlugin'
-apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_commontasks")
-apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")
+apply from: getSingleFileInConfiguration(project.buildscript.configurations.classpath,"omctf_commontasks")
+//apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_commontasks")
+//apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_taskprocessor")
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
 /* *************************************************************************************************
  *                   END OF TEST-INFRA-BLOCK
@@ -65,7 +69,10 @@ dependencies {
 	testConfig(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') { transitive = false }
 	testConfig(group: 'javax.transaction', name: 'javax.transaction-api', version: '1.2'){ transitive = false }
 	testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }    	
-
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}	
+	testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
+	testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
 	configurations {
 		restAssured.exclude module: "groovy"
 	}
@@ -111,6 +118,22 @@ task DEVTest2(type:EMTest,dependsOn: DEVTest1){
 	useRestAssured =true
 	ext.set("testType", "unit")
 }
+task QATest(type:EMTest,dependsOn: DEVTest2){
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/category/*"
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/common/*"
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/exception/*"
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/folder/*"
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/importsavedsearch/*"
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/navigations/*"
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/search/*"
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/util/*"
+	include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/widget/*"
+	//useWebdriver = true
+	// include "oracle.sysman.emSDK.emaas.platform.savedsearch.ws.*"
+        useRestAssured=true
+	ext.set("testType", "integration")
+}
 
-omcTeardown.mustRunAfter(DEVTest2)
-task emcpssf_dev_test_3n (dependsOn: [DEVTest2,omcTeardown])
+
+omcTeardown.mustRunAfter(QATest)
+task emcpssf_l2_test_3n (dependsOn: [DEVTest2,omcTeardown])
