--- a/tests/suites/emcpssf_test_3n.gradle
+++ b/tests/suites/emcpssf_test_3n.gradle
@@ -138,4 +138,4 @@ task QATest(type:EMTest,dependsOn: DEVTest2){
 
 
 omcTeardown.mustRunAfter(QATest)
-task emcpssf_l2_test_3n (dependsOn: [QATest,omcTeardown])
+task emcpssf_test_3n (dependsOn: [QATest,omcTeardown])
