--- a/build.gradle
+++ b/build.gradle
@@ -169,6 +169,7 @@ configurations {
 	prebuild_cache { transitive = false }
 	prebuild_integtest { transitive = false } 
 	compile.exclude group: "com.google.code.findbugs", module: "annotations"
+	driver
 }
 
 dependencies {	
@@ -203,6 +204,7 @@ dependencies {
 	prebuild_wlfullc 'com.oracle.weblogic:wlfullclient:12.1.2-0-0'
 	prebuild_cache   'com.oracle.coherence:coherence:12.1.3.0.0-130331.2230'
 	prebuild_integtest 'org.jmockit:jmockit:1.19'
+	driver group: 'com.oracle.jdbc', name: 'ojdbc7', version: '12.1.0.1.0'
 }
 
 // Copy downloaded 3rd party jars from Artifactory into the locations 
@@ -282,3 +284,43 @@ artifactoryPublish {
 // Apply code coverage gradle file. Defines jacoco and sonar properties.
 project.ext.set("source_cc", "${rootDir}/codeCoverage")
 apply from: "${project.ext.source_cc}/codeCoverage.gradle"
+
+// clean up database for Local LRG
+URLClassLoader loader = GroovyObject.class.classLoader
+configurations.driver.each {File file ->
+    loader.addURL(file.toURL())
+}
+
+String CLEANUP_SQL = "cleanup_ssf.sql"
+String db_usr = "SYSEMS_T_9"
+String db_pw = "welcome1"
+String db_url_pre = "jdbc:oracle:thin:@"
+String db_url_suf = ".us.oracle.com:1521:orcl12c"
+
+task cleanUpDB4LocalLRG<<{
+    if(project.hasProperty('cleanDB')) {
+    	def driverName = 'oracle.jdbc.OracleDriver'
+    	Class.forName(driverName)
+    	def props = [user: db_usr, password: db_pw] as Properties
+    	def url = db_url_pre + project.getProperty('cleanDB') + db_url_suf
+    	def sql = groovy.sql.Sql.newInstance(url,props,driverName)
+    	def file = new File(CLEANUP_SQL)
+
+    	file.eachLine{
+		def line=it
+		if(!line.trim().isEmpty()&&!line.contains("commit"))
+		{
+			if(line.trim().toLowerCase().startsWith("delete"))
+			{
+				line=line.replace(";","")
+				sql.execute(line)
+				println "Successfully Executed: "+line+" , affected row count:"+sql.getUpdateCount()
+			}
+		}	
+    	}
+    	sql.close() 
+	println "\t================================\n"
+	println "\t     Clean up DB data done\n"
+	println "\t================================"
+    }
+}
