remove the a 3n case from L1 list, as the case is in L2 case list already

--- a/tests/suites/emcpssf_l1_test.gradle
+++ b/tests/suites/emcpssf_l1_test.gradle
@@ -96,7 +96,7 @@ include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImp
 
 
 include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
-include "oracle/sysman/emaas/savedsearch/FolderManagerTest.class"
+//include "oracle/sysman/emaas/savedsearch/FolderManagerTest.class"
 include "oracle/sysman/emaas/savedsearch/PersistenceManagerTest.class"
 //include "oracle/sysman/emaas/savedsearch/SearchTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/CategoryManagerImplTest.class"
