--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -59,6 +59,7 @@ maven {
     }
 
 dependencies {
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
