--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -57,7 +57,8 @@ maven {
         maven {
             url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
-
+def regLookupClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-lookup-client', '1.+')
+def regClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-client', '1.+')
 dependencies {
 
 
@@ -105,8 +106,8 @@ dependencies {
       exclude group: 'emaas.platform', module: 'registry-client'
   
 	}
-	testConfig(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+')
-	testConfig(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+')	 
+	testConfig(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: regLookupClientVer)
+	testConfig(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: regClientVer)
 	configurations{
 		restAssured.exclude module: 'groovy'
 	}
