--- a/savedsearch-core/build.gradle
+++ b/savedsearch-core/build.gradle
@@ -87,7 +87,8 @@ test {
         }
 }
 
-
+def regLookupClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-lookup-client', '1.0.0+')
+def regClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-client', '1.0.0+')
 dependencies {
 	compile project(':savedsearch-entities'){transitive = false}
 	testRuntime(group: 'com.oracle.jdbc', name: 'ojdbc6', version: '12.1.0.1.0'){transitive = false}
@@ -104,8 +105,8 @@ dependencies {
 	compile(group: 'com.sun.jersey', name: 'jersey-client', version: '1.17'){transitive = false}
 	compile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
 	compile(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){transitive = false}
-	compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.0.0+')
-	compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') 
+	compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: regClientVer)
+	compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: regLookupClientVer)
 	compile(group: 'com.oracle.emaas', name:'emaas-platform-tenant-sdk', version:'0.2')  { transitive = false }
 	compile(group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.4.2') {transitive = false}
     testCompile(group: 'org.jmockit', name: 'jmockit', version: '1.19') { transitive = false }
