--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -24,15 +24,16 @@ ear
 	}
 }
 
-dependencies 
+def regLookupClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-lookup-client', '1.+')
+def regClientVer= getDependentSdkVersion('com.oracle.emaas.emcpsm', 'registry-client', '1.+')
+dependencies
 {
 	deploy (project(path:':savedsearch-web', configuration:'archives')) {transitive = false}
-//	earlib (group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-core', version: '1.0.0+'){transitive = false}
 	earlib (project(':savedsearch-core')){transitive = false}
 	earlib (project(':savedsearch-entities')){transitive = false}
 	earlib (project(':savedsearch-web-utils')){transitive = false} 
-	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+') {transitive=false }
-	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+') {transitive=false }
+	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: regLookupClientVer) {transitive=false }
+	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: regClientVer) {transitive=false }
         earlib(group: 'org.apache.zookeeper', name:'zookeeper', version:'3.4.6') {transitive=false }
         earlib(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {transitive=false }
         earlib(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1')
