fix -PENABLE_CC fix entity gradle add entity test

--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,10 @@ task runS1Tests(type: Exec) {
     if (project.hasProperty('BuildID')) {
         args "-PREPO_BID=${BuildID}"
     }
+    if (project.hasProperty('ENABLE_CC')) {
+        args "-PENABLE_CC=1"
+    }
+
     finalizedBy "print_results"
 }
  
@@ -134,6 +138,10 @@ task runS2Tests(type: Exec) {
     if (project.hasProperty('BuildID')) {
         args "-PREPO_BID=${BuildID}"
     }
+    if (project.hasProperty('ENABLE_CC')) {
+        args "-PENABLE_CC=1"
+    }
+	
     finalizedBy "print_results"
 }
 
