--- a/tests/suites/emcpssf_l0_test.gradle
+++ b/tests/suites/emcpssf_l0_test.gradle
@@ -65,6 +65,7 @@ dependencies {
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils', version: "${REPO_BID}"){transitive = false}	
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils-integ-tests', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-utils', version: "${REPO_BID}") {transitive = false}
+	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities-integ-tests', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}
 	testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-entities', version: "${REPO_BID}") {transitive = false}
@@ -124,10 +125,10 @@ include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/exception/EMAnalytics
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/search/FilterSearchAPITest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/folder/FolderAPITest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/HeadersUtilTest.class"
-//include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportCategorySetTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportCategorySetTest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/exception/ImportExceptionTest.class"
-//include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportFolderSetTest.class"
-//include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportSearchSetTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportFolderSetTest.class"
+include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/importsearch/ImportSearchSetTest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/util/JsonUtilTest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/loggingconfig/LoggingConfigAPITest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/ws/rest/loggingconfig/LoggingItemsTest.class"
@@ -156,7 +157,7 @@ ext.set("testType", "integration")
    task DEVTest(type:EMTest,dependsOn: QATest){	
 
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/CategoryManagerImplTest.class"
-/*include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/QueryParameterConstantTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/QueryParameterConstantTest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/model/TenantInfoTest.class"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/exception/EMAnalyticsFwkExceptionTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/EmAnalyticsObjectUtilTest.class"
@@ -171,19 +172,19 @@ include "oracle/sysman/emSDK/emaas/platform/savedsearch/model/SchemaVersionTest.
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/SearchManagerImplTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/importsearch/SearchPaurameterDetailsTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/DBConnectionManagerTest.class"
-include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImplTest.java"*/
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImplTest.java"
 
 
-//include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
-//include "oracle/sysman/emaas/savedsearch/FolderManagerTest.class"
+include "oracle/sysman/emaas/savedsearch/CategoryTest.class"
+include "oracle/sysman/emaas/savedsearch/FolderManagerTest.class"
 include "oracle/sysman/emaas/savedsearch/PersistenceManagerTest.class"
-//include "oracle/sysman/emaas/savedsearch/SearchTest.class"
+include "oracle/sysman/emaas/savedsearch/SearchTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/CategoryManagerImplTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/DBConnectionManagerTestS2.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/EmAnalyticsObjectUtilTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/FolderManagerImplTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/model/SearchManagerImplTest.class"
-//include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/PersistenceManagerTest.class"
+include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/PersistenceManagerTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/QAToolUtilTestS2.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/persistence/SchemaUtilTest.class"
 include "oracle/sysman/SDKImpl/emaas/platform/savedsearch/util/LogUtilTest.class"
@@ -203,6 +204,18 @@ include "oracle/sysman/emaas/platform/savedsearch/services/VersionValidationServ
 include "oracle/sysman/emaas/platform/savedsearch/targetmodel/services/SavedSearchStatusTest.class"
 include "oracle/sysman/emaas/platform/savedsearch/wls/lifecycle/AbstractApplicationLifecycleServiceTest.class"
 include "oracle/sysman/emaas/platform/savedsearch/wls/management/AppLoggingManageMXBeanTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsSearchTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsSearchParamTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsSearchParamPKTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsSearchLastAccessTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsSchemaVerTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsSchemaVerPKTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsLastAccessTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsLastAccessPKTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsFolderTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsCategoryTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsCategoryParamTest.class"
+include "oracle/sysman/emaas/platform/savedsearch/entity/EmAnalyticsCategoryParamPKTest.class"
 
 
 useRestAssured =true
